Continued on working to improve data processing time.

--- a/server/dp/Data processing.ipynb
+++ b/server/dp/Data processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +26,44 @@
     "    gen = recipe_json_1.iterrows()\n",
     "    # for index in range(0,10):\n",
     "    #     next(gen)\n",
-    "    for index in range(0,10):\n",
-    "        _, res = next(gen)\n",
+    "    for index in range(0, 10):\n",
+    "        ind, res = next(gen)\n",
     "        res = res['categories']\n",
     "        res = np.squeeze(res)\n",
-    "        print(res)\n",
-    "        print(type(res))\n",
     "        res = [x.lower() for x in res]\n",
     "        res = sorted(res)\n",
-    "        yield res\n"
+    "        print(res)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recipe_json_1 = pd.read_json(recipe_json_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def m1():\n",
+    "    for index, recipe in recipe_json_1.iterrows():\n",
+    "        # The recipe title to be used as a key in found_count for storing recipe result name.\n",
+    "        recipe_name = recipe[\"title\"]\n",
+    "\n",
+    "        recipe_ingredients = recipe['categories']\n",
+    "        recipe_ingredients = np.squeeze(recipe_ingredients)\n",
+    "        recipe_ingredients = [x.lower() for x in recipe_ingredients]\n",
+    "        # res = sorted(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +86,25 @@
     "        # Recipe with only one-hot encoding column.\n",
     "        one_hot_recipe = recipe_df_1.iloc[i][is_one_hot_true]\n",
     "        res2 = sorted(one_hot_recipe.index.values.tolist())\n",
-    "        yield res2\n"
+    "        print(res2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sandwich' 'Bean' 'Fruit' 'Tomato' 'turkey' 'Vegetable' 'Kid-Friendly'\n 'Apple' 'Lentil' 'Lettuce' 'Cookie']\n<class 'numpy.ndarray'>\nTrue\n['Food Processor' 'Onion' 'Pork' 'Bake' 'Bastille Day' \"New Year's Eve\"\n 'Dried Fruit' 'Port' 'Winter' 'Chill' 'Bon Appétit']\n<class 'numpy.ndarray'>\nTrue\n['Soup/Stew' 'Dairy' 'Potato' 'Vegetable' 'Fennel' 'Gourmet' 'New York']\n<class 'numpy.ndarray'>\nTrue\n['Fish' 'Olive' 'Tomato' 'Sauté' 'Low Fat' 'Low Cal' 'High Fiber' 'Dinner'\n 'Healthy' 'Simmer' 'Bon Appétit' 'Pescatarian' 'Dairy Free' 'Peanut Free'\n 'Tree Nut Free' 'Soy Free' 'Kosher']\n<class 'numpy.ndarray'>\nTrue\n['Cheese' 'Dairy' 'Pasta' 'Vegetable' 'Side' 'Bake' 'Vegetarian'\n 'Quick & Easy' 'Fall' 'Bon Appétit' 'California']\n<class 'numpy.ndarray'>\nTrue\n['Sandwich' 'Food Processor' 'Tomato' 'Kid-Friendly' 'Quick & Easy'\n 'Basil' 'Bacon' 'Summer' 'Lettuce' 'Bon Appétit']\n<class 'numpy.ndarray'>\nTrue\n['Salad' 'Potato' 'Side' 'Easter' 'Low Fat' 'Quick & Easy' 'Ham'\n 'Asparagus' 'Spinach' 'Carrot' 'Spring' 'Healthy' 'Sugar Snap Pea' 'Boil'\n 'Bon Appétit' 'Dairy Free' 'Wheat/Gluten-Free' 'Peanut Free'\n 'Tree Nut Free' 'Soy Free' 'No Sugar Added']\n<class 'numpy.ndarray'>\nTrue\n['Egg' 'Fruit' 'No-Cook' 'Cocktail Party' 'Vegetarian' 'Winter' 'Kumquat'\n 'Gourmet']\n<class 'numpy.ndarray'>\nTrue\n['Beef' 'Ginger' 'Sauté' 'Stir-Fry' 'Quick & Easy' 'Spring' 'Soy Sauce'\n 'Gourmet']\n<class 'numpy.ndarray'>\nTrue\n['Salad' 'Mustard' 'Potato' 'Picnic' 'Lunch' 'Mayonnaise' 'Ham' 'Pea'\n 'Summer' 'Gourmet' 'Sugar Conscious' 'Dairy Free' 'Wheat/Gluten-Free'\n 'Peanut Free' 'Tree Nut Free' 'Soy Free']\n<class 'numpy.ndarray'>\nTrue\n"
-     ]
+     "ename": "TypeError",
+     "evalue": "iteration over a 0-d array",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-5c7d26506293>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mm2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-38-2b67151ca0e9>\u001b[0m in \u001b[0;36mm1\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'categories'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0;31m# res = sorted(res)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: iteration over a 0-d array"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -87,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +150,7 @@
     "\n",
     "        recipe_ingredients = recipe['categories']\n",
     "        recipe_ingredients = np.squeeze(recipe_ingredients)\n",
-    "        recipe_ingredients.reshape((len(recipe_ingredients),1))\n",
+    "        # recipe_ingredients.reshape((len(recipe_ingredients),1))\n",
     "        recipe_ingredients = [x.lower() for x in recipe_ingredients]\n",
     "        # res = sorted(res)\n",
     "\n",
@@ -173,18 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "len() of unsized object",
+     "evalue": "iteration over a 0-d array",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-f669d7df4b2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_matching_recipes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeywords_from_inventory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mtoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoc\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtic\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" seconds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-18-d724d39417f6>\u001b[0m in \u001b[0;36mfind_matching_recipes\u001b[0;34m(keywords, result_count)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'categories'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;31m# res = sorted(res)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: len() of unsized object"
+      "\u001b[0;32m<ipython-input-24-3111544cf65f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_matching_recipes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeywords_from_inventory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mtoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoc\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtic\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" seconds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-2761c029e0b1>\u001b[0m in \u001b[0;36mfind_matching_recipes\u001b[0;34m(keywords, result_count)\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# recipe_ingredients.reshape((len(recipe_ingredients),1))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mrecipe_ingredients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecipe_ingredients\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0;31m# res = sorted(res)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: iteration over a 0-d array"
      ],
      "output_type": "error"
     }
@@ -280,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
